Chrome Mobile Bug Fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="/public/manifest.json" />
-    <title>Try Vendr</title>
+    <title>Vendr</title>
   <link rel="shortcut icon" href="favicon.ico"></head>
 
   <body>
