--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="/tryvendr/favicon.ico" />
+    <link rel="shortcut icon" href="/vendrproject.github.io/tryvendr/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vendr</title>
-    <script type="module" crossorigin src="/tryvendr/assets/main-ZHx-JjgN.js"></script>
-    <link rel="stylesheet" crossorigin href="/tryvendr/assets/main-B27kWUyw.css">
+    <script type="module" crossorigin src="/vendrproject.github.io/tryvendr/assets/main-CaUfVIRz.js"></script>
+    <link rel="stylesheet" crossorigin href="/vendrproject.github.io/tryvendr/assets/main-B27kWUyw.css">
   </head>
   <body>
     <div id="root"></div>
